# zeal-archiver

./: .gitignore  CHANGELOG  CMakeLists.txt  Makefile  README.md  zar.py
cmake/: zar-config.cmake  zar_init.cmake
include/: zar.h
lib/: zar.lib
libsrc/: zar.c
src/: main.c  stdutils.c  stdutils.h  zar.c  zar.h
